# eightfold-candidate-transformer

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: strict_validation.json
data/samples/: crm_export.csv  crm_export_real.csv  github_suveer144.json  recruiter_notes.txt  recruiter_notes_real.txt
output/: real_profile_default.json  real_profile_reshaped.json  sample_fictional_default.json
scripts/: build_design_doc.py
src/transformer/: __init__.py  cli.py  confidence.py  merger.py  pipeline.py  projector.py  schema.py  validator.py
src/transformer/normalizers/: __init__.py  date.py  location.py  phone.py  skill.py
src/transformer/sources/: __init__.py  base.py  crm.py  github.py  notes.py
tests/: test_confidence.py  test_merger.py  test_pipeline.py  test_projector.py  test_validator.py
tests/test_normalizers/: test_location.py  test_phone.py  test_skill.py
tests/test_sources/: test_crm.py  test_github.py  test_notes.py
