[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "candidate-transformer"
version = "0.1.0"
description = "Multi-source candidate data transformer"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "phonenumbers>=8.13",
    "pycountry>=23.12",
    "pyyaml>=6.0",
    "python-dateutil>=2.8",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1"]

[project.scripts]
candidate-transformer = "transformer.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
